# CPP_OpenCV_Playground

./: README.md
cpp01/: cpp01_arr_vector  cpp01_arr_vector.cpp  cpp01_for_loop  cpp01_for_loop.cpp  cpp01_range_for  cpp01_range_for.cpp  cpp01_switch.cpp  cpp01_types  cpp01_types.cpp  cpp01_var_const  cpp01_var_const.cpp  cpp01_var_scope.cpp
cpp02/: cp02_linker_main  cp02_linker_main.cpp  cp02_linker_main.ii  cpp02_CMake.cpp  cpp02_GOOD_BAD_PRACTICE  cpp02_GOOD_BAD_PRACTICE.cpp  cpp02_catchERR  cpp02_default_params  cpp02_default_params.cpp  cpp02_func_overload  cpp02_func_overload.cpp  cpp02_functions  cpp02_functions.cpp  cpp02_header.cpp  cpp02_library_linking.cpp  cpp02_linker.cpp  cpp02_linker_cpp  cpp02_passing  cpp02_passing.cpp
cpp03/: CMakeLists.txt  README.md  cpp03_avoid_using_namespace  cpp03_avoid_using_namespace.cpp  cpp03_classes.cpp  cpp03_const_error.cpp  cpp03_create_instances.cpp  cpp03_namespace_eg  cpp03_namespace_eg.cpp  cpp03_set_get_data.cpp  cpp03_structs  cpp03_structs.cpp  cpp03_using_namespace_right_way  cpp03_using_namespace_right_way.cpp
cpp03/gtest/: CTestTestfile.cmake  Makefile
cpp03/src/: CMakeLists.txt  blah.cpp  blah.h  hello.cpp  hello.h  main.cpp
cpp03/tests/: CMakeLists.txt  test_blah.cpp
cpp_00/: cpp00  cpp00_in_out.cpp  cpp_HelloWorld.cpp
homeworks/hw_1/: Q&A.md  guess_game  guess_game.cpp
